Reddit Video playback causes Firefox to crash on Windows 10
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
People
(Reporter: sbadau, Assigned: sotaro)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(5 files)
|
8.57 MB,
image/gif
|
Details | |
|
38.57 KB,
text/plain
|
Details | |
|
39.94 KB,
text/plain
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-release+
|
Details |
|
4.56 KB,
image/png
|
Details |
Found in
- Nightly 114.0a1
Affected versions
- Nightly 114
- Firefox 113 beta
- Firefox 112.0.2
Tested platforms
- Affected platforms: Windows 10
Steps to reproduce
- Open a new tab and go to this Reddit video
- Click on the Play button.
Expected result
- The video should play properly until it ends.
Actual result
- The video starts and after a few seconds, the whole window turns white for a short period, the UI is restored but the video is stuck to a certain frame even though the audio still runs in the background. This crash can be found in about:crashes.
https://crash-stats.mozilla.org/report/index/8fab0b0f-157e-4f98-886d-439c80230504 - If I close Firefox and open it again, I either get the Close Firefox dialog or another crash like:
https://crash-stats.mozilla.org/report/index/c4524408-48cf-4194-a41a-fe7000230504
Regression range
I could not reproduce this issue on Firefox 102.10.0esr, but I could reproduce it on Firefox 112.0.2 and on Firefox 113 Beta.
Looked for a regression window and got the white flicker until:
- Last good revision: 88a5bf648f2f45eec3572e678d74434206a66159
- First bad revision: 6c4c49f17ed0a862d289609ff45b3ae66454a402
- Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=88a5bf648f2f45eec3572e678d74434206a66159&tochange=6c4c49f17ed0a862d289609ff45b3ae66454a402 - Potentially regressed by: Bug 1766282
Additional notes
- The issue is not reproducible on all the Reddit videos, but another one that shows the same behavior is this one.
- Tried to reproduce the crashes on 2 other Windows 10 machines but I couldn't.
| Reporter | ||
Comment 1•3 years ago
|
||
Comment 2•3 years ago
|
||
:sotaro, since you are the author of the regressor, bug 1766282, could you take a look?
For more information, please visit BugBot documentation.
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
I could not reproduce the problem with similar GPU. Then it might be cased by an old driver.
| Assignee | ||
Updated•3 years ago
|
Comment 4•3 years ago
|
||
Set release status flags based on info from the regressing bug 1766282
| Assignee | ||
Comment 5•3 years ago
|
||
0x1912 is in [DeviceFamily::IntelSkylake]https://searchfox.org/mozilla-central/rev/ee6ab6eb2d222e0004604de62206baa67cac33af/widget/GfxDriverInfo.cpp#315).
GPU #1
Active: Yes
Description: Intel(R) HD Graphics 530
Vendor ID: 0x8086
Device ID: 0x1912
Driver Version: 20.19.15.4390
Driver Date: 2-18-2016
And DeviceFamily::IntelSkylake is already blocked with FEATURE_HW_DECODED_VIDEO_ZERO_COPY
| Assignee | ||
Comment 6•3 years ago
•
|
||
It seems necessary to block FEATURE_HW_DECODED_VIDEO_ZERO_COPY. It might be necessary to block also FEATURE_REUSE_DECODER_DEVICE.
| Assignee | ||
Comment 7•3 years ago
|
||
| Assignee | ||
Comment 8•3 years ago
|
||
Simona Badau, can you check if D177864 blocks FEATURE_HW_DECODED_VIDEO_ZERO_COPY? And can you also check if D177864 addresses the problem for you?
Blocking of FEATURE_HW_DECODED_VIDEO_ZERO_COPY could be checked at about:support
The following build could be used for checking.
| Reporter | ||
Comment 9•3 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #8)
Simona Badau, can you check if D177864 blocks FEATURE_HW_DECODED_VIDEO_ZERO_COPY? And can you also check if D177864 addresses the problem for you?
Blocking of FEATURE_HW_DECODED_VIDEO_ZERO_COPY could be checked at about:support
The following build could be used for checking.
Yes, the HW_DECODED_VIDEO_ZERO_COPY is blocked in about:support and I am no longer able to reproduce the crashes on the above build.
| Assignee | ||
Comment 10•3 years ago
|
||
Great! Thank you.
Comment 11•3 years ago
|
||
Comment 12•3 years ago
|
||
| bugherder | ||
Comment 13•3 years ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox114towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 14•2 years ago
|
||
Comment on attachment 9333258 [details]
Bug 1831329 - Block FEATURE_HW_DECODED_VIDEO_ZERO_COPY with Driver Version: 20.19.15.4390
Beta/Release Uplift Approval Request
- User impact if declined: GPU process crash happens during video playback with Intel HD Graphics 530 of Driver Version: 20.19.15.4390.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change simply extends an existing block list.
- String changes made/needed: none
- Is Android affected?: No
Comment 15•2 years ago
|
||
Should we take this on Release for next week's planned dot release also?
| Assignee | ||
Comment 16•2 years ago
|
||
:jrmuizel, do we need to take the fix to Release?
Comment 17•2 years ago
•
|
||
Comment on attachment 9333258 [details]
Bug 1831329 - Block FEATURE_HW_DECODED_VIDEO_ZERO_COPY with Driver Version: 20.19.15.4390
Approved for 114.0b5, thanks
Comment 18•2 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Comment 20•2 years ago
|
||
Comment on attachment 9333258 [details]
Bug 1831329 - Block FEATURE_HW_DECODED_VIDEO_ZERO_COPY with Driver Version: 20.19.15.4390
Beta/Release Uplift Approval Request
- User impact if declined: GPU process crash happens during video playback with Intel HD Graphics 530 of Driver Version: 20.19.15.4390.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change simply extends an existing block list.
- String changes made/needed: none
- Is Android affected?: No
| Reporter | ||
Comment 21•2 years ago
|
||
Verified as fixed on the latest Nightly 115.0a1 and Firefox 114.0b5 - no more crashes on Windows 10 when using the scenario from the Description.
However, I found a scenario in the builds with this fix: Nightly 115.0a1 and Firefox 114.0b5 (Firefox 113.0.1 is not affected) where Firefox becomes unresponsive if multiple Reddit videos are played simultaneously. Logged Bug 1833809 to cover this.
Comment 22•2 years ago
|
||
Comment on attachment 9333258 [details]
Bug 1831329 - Block FEATURE_HW_DECODED_VIDEO_ZERO_COPY with Driver Version: 20.19.15.4390
Approved for 113.0.2.
Comment 23•2 years ago
|
||
| bugherder uplift | ||
Comment 24•2 years ago
|
||
Added to the 113.0.2 release notes:
Fixed a video playback crash on some Windows systems with Intel graphics
| Reporter | ||
Comment 25•2 years ago
|
||
Verified as fixed using the latest Firefox 13.0.2 on Windows 10 x64 with Intel HD Graphics 530 of Driver Version: 20.19.15.4390.
Description
•