Bug 1831329 - Block FEATURE_HW_DECODED_VIDEO_ZERO_COPY with Driver Version: 20.19.15.4390 r=gfx-reviewers,ErichDonGubler a=pascalc

FEATURE_HW_DECODED_VIDEO_ZERO_COPY does not work with Intel HD Graphics 530 of Driver Version: 20.19.15.4390.

Differential Revision: https://phabricator.services.mozilla.com/D177864